add swagger docs for auth controllers
