# docs/swagger.yaml
@@ -11,5 +11,171 @@ info:
   termsOfService: http://swagger.io/terms/
   title: Fiber Example API
   version: "1.0"
-paths: {}
+paths:
+  /auth/apikey:
+    get:
+      consumes:
+      - application/json
+      description: Returns a page to get the initial API key. If the initial password
+        has expired, it redirects to the home page.
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: Render the API key form page
+          schema:
+            additionalProperties: true
+            type: object
+        "302":
+          description: Redirect to the home page if the initial password has expired
+          schema:
+            type: string
+        "500":
+          description: Error getting initial password from Redis
+          schema:
+            type: string
+      summary: Get API Key Page
+      tags:
+      - Authentication
+    post:
+      consumes:
+      - application/json
+      description: Generates a new API key and stores it in Redis with a TTL of 7
+        days. If the initial password has expired, it redirects to the home page.
+      parameters:
+      - description: Password for API key generation
+        in: formData
+        name: password
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: 'API key: {apiKey}'
+          schema:
+            type: string
+        "302":
+          description: Redirect to the home page if the initial password has expired
+          schema:
+            type: string
+        "400":
+          description: Incorrect password
+          schema:
+            type: string
+        "500":
+          description: Error getting initial password or generating API key
+          schema:
+            type: string
+      summary: Generate API Key
+      tags:
+      - Authentication
+  /google/auth:
+    get:
+      consumes:
+      - application/json
+      description: Redirects to the Google OAuth2 authentication page.
+      parameters:
+      - description: Authorization code from Google OAuth2 provider
+        in: query
+        name: code
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "302":
+          description: Redirect to a predefined route after successful authorization
+          schema:
+            type: string
+        "400":
+          description: No authorization code found in the request
+          schema:
+            type: string
+        "500":
+          description: Error loading OAuth2 config or exchanging code for token
+          schema:
+            type: string
+      summary: OAuth2 Redirect for Google
+      tags:
+      - OAuth2
+  /google/oauth_redirect:
+    get:
+      consumes:
+      - application/json
+      description: Handles the callback from Google OAuth2 authentication, exchanging
+        the authorization code for an access token.
+      parameters:
+      - description: Authorization code from Google OAuth2 provider
+        in: query
+        name: code
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "302":
+          description: Redirect to a predefined route after successful authorization
+          schema:
+            type: string
+        "400":
+          description: No authorization code found in the request
+          schema:
+            type: string
+        "500":
+          description: Unable to read client secret file or parse it to config
+          schema:
+            type: string
+      summary: OAuth2 Redirect for Google
+      tags:
+      - OAuth2
+  /outlook/auth:
+    get:
+      consumes:
+      - application/json
+      description: Redirects to the Outlook OAuth2 authentication page.
+      produces:
+      - application/json
+      responses:
+        "302":
+          description: Redirect to the Outlook OAuth2 authentication page.
+          schema:
+            type: string
+        "500":
+          description: Error loading OAuth2 config
+          schema:
+            type: string
+      summary: Get Outlook Auth Page
+      tags:
+      - OAuth2
+  /outlook/oauth_redirect:
+    get:
+      consumes:
+      - application/json
+      description: Handles the callback from Outlook OAuth2 authentication, exchanging
+        the authorization code for an access token.
+      parameters:
+      - description: Authorization code from Outlook OAuth2 provider
+        in: query
+        name: code
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "302":
+          description: Redirect to a predefined route after successful authorization
+          schema:
+            type: string
+        "400":
+          description: No authorization code found in the request
+          schema:
+            type: string
+        "500":
+          description: Error loading OAuth2 config or exchanging code for token
+          schema:
+            type: string
+      summary: OAuth2 Redirect for Outlook
+      tags:
+      - OAuth2
 swagger: "2.0"
